// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`page-metadata factories — snapshots > generateBlogIndexMetadata shape 1`] = `
"{
  "metadataBase": "https://example.com/",
  "openGraph": {
    "siteName": "Example",
    "locale": "pt_BR",
    "type": "website",
    "url": "https://example.com/pt/blog",
    "title": "Blog — Example",
    "description": "Artigos sobre engenharia de software, produto e carreira por Example.",
    "images": [
      {
        "url": "https://example.com/og-default.png",
        "width": 1200,
        "height": 630,
        "alt": "Blog — Example"
      }
    ]
  },
  "twitter": {
    "site": "@tnFigueiredo",
    "creator": "@tnFigueiredo",
    "card": "summary_large_image"
  },
  "title": "Blog",
  "description": "Artigos sobre engenharia de software, produto e carreira por Example.",
  "alternates": {
    "canonical": "/pt/blog",
    "languages": {
      "pt": "/pt/blog",
      "en": "/blog",
      "x-default": "/pt/blog"
    }
  }
}"
`;

exports[`page-metadata factories — snapshots > generateBlogPostMetadata shape 1`] = `
"{
  "metadataBase": "https://example.com/",
  "openGraph": {
    "siteName": "Example",
    "locale": "pt_BR",
    "type": "article",
    "title": "Hello World",
    "description": "exc-en",
    "url": "https://example.com/blog/hello-world-en",
    "publishedTime": "2026-04-14T00:00:00.000Z",
    "modifiedTime": "2026-04-15T00:00:00.000Z",
    "images": [
      {
        "url": "https://example.com/og/blog/en/hello-world-en",
        "width": 1200,
        "height": 630,
        "alt": "Hello World"
      }
    ]
  },
  "twitter": {
    "site": "@tnFigueiredo",
    "creator": "@tnFigueiredo",
    "card": "summary_large_image"
  },
  "title": "Hello World",
  "description": "exc-en",
  "alternates": {
    "canonical": "/blog/hello-world-en",
    "languages": {
      "pt": "/pt/blog/hello-world",
      "en": "/blog/hello-world-en",
      "x-default": "/pt/blog/hello-world"
    }
  }
}"
`;

exports[`page-metadata factories — snapshots > generateCampaignMetadata shape 1`] = `
"{
  "metadataBase": "https://example.com/",
  "openGraph": {
    "siteName": "Example",
    "locale": "pt_BR",
    "type": "article",
    "title": "Título da campanha",
    "description": "Descrição da campanha",
    "url": "https://example.com/pt/campaigns/c1",
    "images": [
      {
        "url": "https://example.com/og/c1.png",
        "width": 1200,
        "height": 630,
        "alt": "Título da campanha"
      }
    ]
  },
  "twitter": {
    "site": "@tnFigueiredo",
    "creator": "@tnFigueiredo",
    "card": "summary_large_image"
  },
  "title": "Título da campanha",
  "description": "Descrição da campanha",
  "alternates": {
    "canonical": "/pt/campaigns/c1",
    "languages": {
      "pt": "/pt/campaigns/c1",
      "en": "/campaigns/c1",
      "x-default": "/pt/campaigns/c1"
    }
  }
}"
`;

exports[`page-metadata factories — snapshots > generateContactMetadata shape (pt-BR) 1`] = `
"{
  "metadataBase": "https://example.com/",
  "openGraph": {
    "siteName": "Example",
    "locale": "pt_BR",
    "type": "website",
    "url": "https://example.com/pt/contact",
    "title": "Fale comigo — Example",
    "description": "Entre em contato com Example.",
    "images": [
      {
        "url": "https://example.com/og-default.png",
        "width": 1200,
        "height": 630,
        "alt": "Fale comigo"
      }
    ]
  },
  "twitter": {
    "site": "@tnFigueiredo",
    "creator": "@tnFigueiredo",
    "card": "summary_large_image"
  },
  "title": "Fale comigo",
  "description": "Entre em contato com Example.",
  "alternates": {
    "canonical": "/pt/contact",
    "languages": {
      "pt": "/pt/contact",
      "en": "/contact",
      "x-default": "/pt/contact"
    }
  },
  "robots": {
    "index": true,
    "follow": true
  }
}"
`;

exports[`page-metadata factories — snapshots > generateLegalMetadata shape (privacy pt-BR) 1`] = `
"{
  "metadataBase": "https://example.com/",
  "openGraph": {
    "siteName": "Example",
    "locale": "pt_BR",
    "type": "website",
    "url": "https://example.com/pt/privacy",
    "title": "Política de Privacidade — Example",
    "description": "LGPD — dados, direitos, cookies.",
    "images": [
      {
        "url": "https://example.com/og-default.png",
        "width": 1200,
        "height": 630,
        "alt": "Política de Privacidade"
      }
    ]
  },
  "twitter": {
    "site": "@tnFigueiredo",
    "creator": "@tnFigueiredo",
    "card": "summary_large_image"
  },
  "title": "Política de Privacidade",
  "description": "LGPD — dados, direitos, cookies.",
  "alternates": {
    "canonical": "/pt/privacy",
    "languages": {
      "pt": "/pt/privacy",
      "en": "/privacy",
      "x-default": "/pt/privacy"
    }
  },
  "robots": {
    "index": true,
    "follow": true
  }
}"
`;

exports[`page-metadata factories — snapshots > generateNoindexMetadata shape 1`] = `
"{
  "metadataBase": "https://example.com/",
  "openGraph": {
    "siteName": "Example",
    "locale": "pt_BR"
  },
  "twitter": {
    "site": "@tnFigueiredo",
    "creator": "@tnFigueiredo",
    "card": "summary_large_image"
  },
  "robots": {
    "index": false,
    "follow": false
  }
}"
`;

exports[`page-metadata factories — snapshots > generateRootMetadata shape 1`] = `
"{
  "metadataBase": "https://example.com/",
  "openGraph": {
    "siteName": "Example",
    "locale": "pt_BR",
    "type": "website",
    "url": "https://example.com",
    "title": "Example",
    "description": "Blog, newsletters e projetos de Thiago Figueiredo. Engenharia de software, produto e construção em público.",
    "images": [
      {
        "url": "https://example.com/og-default.png",
        "width": 1200,
        "height": 630,
        "alt": "Example"
      }
    ]
  },
  "twitter": {
    "site": "@tnFigueiredo",
    "creator": "@tnFigueiredo",
    "card": "summary_large_image"
  },
  "title": {
    "default": "Example",
    "template": "%s — Example"
  },
  "description": "Blog, newsletters e projetos de Thiago Figueiredo. Engenharia de software, produto e construção em público.",
  "alternates": {
    "canonical": "/",
    "languages": {
      "pt": "/pt/",
      "en": "/",
      "x-default": "/pt/"
    }
  }
}"
`;
